# w-flow

./: .gitignore  evaluate.py  inference.py  inference_bsq_force.py  inference_mnist.py  inference_multi_swap.py  inference_swap.py  pyproject.toml  train.py  util.py
configs/: main.yaml
configs/defaults/: backbone.yaml  dequantizer.yaml  flow.yaml  quantizer.yaml  train.yaml
configs/settings/: debug.yaml
configs/settings/exps/: a-mnist-feature-vq-k10-1h.yaml  a-mnist-feature-vq-k10.yaml  a-mnist-feature-vq-k2-multiwp.yaml  a-mnist-feature-vq-k2-tq025.yaml  a-mnist-feature-vq-k2-tq050.yaml  a-mnist-feature-vq-k2-tq075.yaml  b1-gaussians-vel-vq-k256.yaml  b1-gaussians-vel-vq-k64.yaml  b1-gaussians-vel-vq-k8.yaml  b2-mnist-vel-vq-k256.yaml  b2-mnist-vel-vq-k64.yaml  b2-mnist-vel-vq-k8.yaml  c-gauss-vel-bsq-128.yaml  c1-gauss-vel-bsq.yaml  c2-gauss-vel-bsq-vq.yaml  d-gauss-vq-waypoint.yaml  d1-mnist-bsq-64.yaml  d1-mnist-vq-k10.yaml  d2-mnist-vq-multiwp-k3.yaml  phase1-gaussians-8codes.yaml  phase1-gaussians-commit1.yaml  (+28 more)
data/: afhq.py  celeba.py  default_dataset.py  dsprites.py  fashion_mnist.py  mnist.py  toy_2d.py
evaluation/: disentanglement.py  fid.py  trajectory.py  waypoint_merge.py
modules/: builder.py  configs.py  flow_model.py  output_dataclasses.py
modules/autoencoder/: velocity_ae.py
modules/backbone/: dit.py  mlp.py  unet.py
modules/dequantizer/: linear.py  residual.py  stochastic.py
modules/flow/: feature_cluster.py  rectified_flow.py  solver.py  velocity_bsq.py  velocity_quant.py
modules/quantizer/: bsq.py  fsq.py  vq.py
(+9 files in other folders)
